samples/_failures_safe/1761207074_9f449d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4745506.c: In function ‘state_machine_step’:
./samples/SAFE/__tmp_e4745506.c:160:21: error: expected declaration or statement at end of input
  160 |                     ctx->error_code = 0;
      |                     ^~~
./samples/SAFE/__tmp_e4745506.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e4745506.c:160:21: error: expected declaration or statement at end of input
